# note_taking_web_app

./: .env.example  .gitignore  README.md  insert_demo_data.py  login_form_making.py  main.py  pyproject.toml  wft_forms_fillup.py  zzz_add_fake_data.py  zzz_insert_demo_data.py  zzz_rana.py  zzz_working_steps.md
blueprint/admin/: routes.py
blueprint/admin/templates/admin/: _user_search_form.html  all_notes_info.html  all_users_info.html  base_admin_page.html  index.html  notes_count.html  user_from_username.html  user_info.html
blueprint/admin/templates/macros_admin/: navbar.html
blueprint/auth/: routes.py
blueprint/auth/templates/: login_form.html  register.html
blueprint/general/: routes.py
blueprint/note/: routes.py
blueprint/note/templates/: new_note_form.html
blueprint/profile/: routes.py
blueprint/profile/templates/: profile.html
db_codes/: database_make.py  db_functions.py  models_table.py
static/: style.css
templates/: about_page.html  base_static_file.html  dashboard.html  help_page.html  index.html  login.html  login_form.html  new_note_form.html
templates/macros/: navbar.html  table.html
utils/: config_files.py  custom_logger.py  demo_data.py  env.py  needy_things.py
