[project]
name = "note-taking-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "faker>=40.1.0",
]
